Added update schedule for scraping process.

--- a/config/env.yml
+++ b/config/env.yml
@@ -13,3 +13,5 @@ collections:
     lomamatkat: "lomamatkat"
     hispania: "hispania"
     apollomatkat: "apollomatkat"
+scraping:
+    interval: 1800
