--- a/config/env.yml
+++ b/config/env.yml
@@ -13,5 +13,8 @@ collections:
     lomamatkat: "lomamatkat"
     hispania: "hispania"
     apollomatkat: "apollomatkat"
+    napsu: "napsu"
+    seonmoro: "seonmoro"
 scraping:
     interval: 1800
+    paginate: 30
